# agate-information-system

./: .gitignore  .replit  README.md  pyproject.toml
Information System/agate/: Advert.py  Client.py  Staff.py  db.py  main.py
Information System/agate/Class/: Campaign.py  Client.py
InformationSystem/agate/: main.py  test_data_talend.json
InformationSystem/agate/Class/: Advert.py  Campaign.py  Client.py  utils.py
InformationSystem/agate/entity/: advert.py  campaign.py  client.py  staff.py  utils.py
